--- a/shihe-springcloud-gateway/src/main/resources/bootstrap.yml
+++ b/shihe-springcloud-gateway/src/main/resources/bootstrap.yml
@@ -1,8 +1,8 @@
 spring:
   cloud:
     nacos:
-      server-addr: 127.0.0.1:8110
+      server-addr: 127.0.0.1:8848
   profiles:
     active: dev
   application:
-    name: gateway-service
+    name: shihe-gateway
