--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.shihe</groupId>
-    <artifactId>springcloud</artifactId>
+    <artifactId>shihe-springcloud-alibaba</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
@@ -13,6 +13,9 @@
         <module>shihe-springcloud-nacos</module>
         <module>shihe-springcloud-mutilds</module>
         <module>shihe-springcloud-gateway</module>
+        <module>shihe-springcloud-netty1</module>
+        <module>shihe-springcloud-netty2</module>
+        <module>shihe-springcloud-common</module>
     </modules>
 
     <properties>
@@ -47,6 +50,8 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+
         </dependencies>
     </dependencyManagement>
 
